# El_Manzanares

./: .gitignore  Andres.txt  Cosas.txt  Pablo.txt  README.md  creador_de_errores.txt
IG/: Cosas.txt  ExamenIG.txt
IG/Nueva carpeta/ProyectosIG_x64_VS2022/: autores.txt
IG/ProyectosIG_x64_VS2022/IG1App/: IG1App.h  main.cpp
IG/Texturas/: Pixmap32RGBA.cpp  Pixmap32RGBA.h  Texture.h
Nueva carpeta/ProyectosIG_x64_VS2022/: IGProjects.props  IGProjects_x64_VS2022.sln  README.md  meson.build
Nueva carpeta/ProyectosIG_x64_VS2022/IG1App/: Camera.h  Entity.cpp  Entity.h  IG1App.vcxproj  Mesh.cpp  Mesh.h
Nueva carpeta/ProyectosIG_x64_VS2022/freeglut/lib/: freeglut.exp
Nueva carpeta/Texturas/: Texture.cpp
TPV/P1/: ProyectosSDL.props
TPV/P1 - Pablo Iglesias Rodrigo, Andres Garcia Navarro/: info.txt
TPV/P1 - Pablo Iglesias Rodrigo, Andres Garcia Navarro/HolaSDL/: Bunker.cpp  Bunker.h  Cannon.cpp  Game.cpp  Game.h  HolaSDL.vcxproj.filters  Laser.h  main.cpp  texture.cpp
TPV/P1/HolaSDL/: Alien.cpp  Alien.h  Bunker.cpp  Bunker.h  Cannon.cpp  Cannon.h  Game.cpp  Game.h  HolaSDL.vcxproj  Laser.cpp  Laser.h  Vector2D.h  main.cpp
TPV/P2/: README.txt
TPV/P2 - Pablo Iglesias Rodrigo, Andres Garcia Navarro/: ProyectosSDL.sln  info.txt
TPV/P2 - Pablo Iglesias Rodrigo, Andres Garcia Navarro/HolaSDL/: Bunker.cpp  Cannon.cpp  FileFormatError.cpp  Game.cpp  HolaSDL.vcxproj  Mothership.cpp  (+4 more)
TPV/P3 - Pablo Iglesias Rodrigo, Andres Garcia Navarro/: info.txt
TPV2/EjercicioVector/: EjercicioVector.sln
TPV2/Practica3/: Resumen.txt  SDLNetUtils.h
TPV2/ver_04/: RAEDME.md
(+519 files in other folders)
